# pdf-simple-sign

./: .clang-format  .gitignore  LICENSE  NEWS  README.adoc  go.mod  go.sum  meson.build  pdf-simple-sign.adoc  pdf-simple-sign.cpp  pdf-simple-sign.h  pdf.cpp  test.sh
cmd/extfs-pdf/: main.go
cmd/pdf-simple-sign/: main.go
lpg/: .clang-format  lpg.cpp  lpg.lua  meson.build
lpg/subprojects/: lua++.wrap
lpg/subprojects/packagefiles/lua-5.4.7/: LICENSE.build  meson.build  meson_options.txt  onelua.cpp
pdf/: pdf.go
